# qodem

./: .gitignore  COPYING  CREDITS  ChangeLog  Doxyfile  FILE_ID.DIZ  INSTALL  Makefile.am  Makefile.in  README.md  autogen.sh  build.sh  configure  configure.ac  qodem.ide
docs/: 100_announcement.txt  TODO.md  beta_announcement.txt  pd_annoucement2.txt  qodem-x11.1  qodem.1  worklog.md  xqodem.1
include/: README.md  dirent.h  fnmatch.h  getopt.h  libgen.h  snprintf.h  stdint.h  strptime.h  wchar.h  wspiapi.h
include/sys/: time.h
lib/c/: Makefile.bcc5  basename.c  dirent.c  dirname.c  fnmatch.c  getopt.c  getopt1.c  libc.ide  snprintf.c  strptime.c  wspiapi.c
lib/c/sys/: time.c
lib/c/vc6libc/: vc6libc.dsp  vc6libc.dsw
lib/cryptlib/: GNUmakefile  README  crypt.h  crypt32.dsp  crypt32.rc  crypt32.sln  crypt32.vcxproj  crypt32static.dsp  cryptapi.c  cryptcrt.c  cryptctx.c  cryptdev.c  cryptenv.c  cryptkey.c  cryptkrn.h  cryptlib.c  cryptlib.h  cryptlib.ide  cryptses.c  cryptusr.c  makefile  test32.sln
lib/cryptlib/bindings/: PerlCryptLib.ph  cryptlib.bas  cryptlib.cs  cryptlib.pas  java_jni.c  python.c
lib/cryptlib/bn/: bn.h  ec_lib.c
lib/cryptlib/cert/: cert.h  certattr.h  certfn.h  certrev.c  certschk.c  certsign.c  certval.c  chain.c  chk_cert.c  chk_chn.c  chk_use.c  comp_cert.c  comp_del.c  comp_get.c  comp_pkiu.c  comp_set.c  dn.c  dn.h  dn_rw.c  dnstring.c  ext.c  ext_add.c  ext_chk.c  ext_def.c  ext_rd.c  ext_wr.c  imp_chk.c  imp_exp.c  read.c  trustmgr.c  write.c  write_pre.c
lib/cryptlib/context/: context.h  ctx_attr.c  ctx_bn.c  ctx_des.c  ctx_dh.c  ctx_dsa.c  ctx_ecdh.c  ctx_ecdsa.c  ctx_elg.c  ctx_hmd5.c  ctx_hrmd.c  ctx_hsha2.c  ctx_misc.c  ctx_rsa.c  key_id.c  key_rdpri.c  key_rdpub.c  key_wr.c  keyload.c  kg_dlp.c  kg_ecc.c  kg_prime.c  kg_rsa.c
lib/cryptlib/crypt/: aes_ni.c  bfecb.c  bfenc.c  bfskey.c  castenc.c  gcm.c  gcm.h  md5dgst.c  osconfig.h  rc5ecb.c  rc5enc.c  rc5skey.c  rmddgst.c
lib/cryptlib/device/: capabil.h  dev_attr.c  hardware.c  hw_dummy.c  ms_capi.c  pkcs11.c  pkcs11_api.h  pkcs11_init.c  pkcs11_pkc.c  pkcs11_rd.c  system.c
lib/cryptlib/enc_dec/: asn1.h  asn1_algid.c  asn1_chk.c  asn1_ext.c  asn1_ext.h  asn1_oids.h  asn1_rd.c  asn1_wr.c  base64.c  base64_id.c  misc_rw.c  misc_rw.h  pgp_rw.c  pgp_rw.h
lib/cryptlib/envelope/: cms_denv.c  cms_env.c  cms_envpre.c  decode.c  encode.c  env_attr.c  envelope.h  pgp_denv.c  pgp_env.c  res_actn.c  res_denv.c
lib/cryptlib/io/: dns.c  dns_srv.c  file.c  http_parse.c  http_rd.c  http_wr.c  memory.c  net.c  net_proxy.c  net_url.c  stream.c  stream.h  stream_int.h  tcp.c  tcp.h
lib/cryptlib/kernel/: acl.h  acl_perm.h  attr_acl.c  certm_acl.c  init.c  int_msg.c  kernel.h  key_acl.c  msg_acl.c  obj_acc.c  objects.c  selftest.c  semaphore.c  sendmsg.c  thread.h
lib/cryptlib/keyset/: ca_clean.c  ca_issue.c  ca_misc.c  ca_rev.c  dbms.c  dbms.h  dbx_misc.c  dbx_rd.c  dbx_wr.c  http.c  keyset.h  ldap.c  odbc.c  pgp.c  pgp_key.h  pgp_rd.c  pkcs12_rd.c  pkcs12_rdo.c  pkcs15.c  pkcs15.h  pkcs15_adpb.c  pkcs15_adpr.c  pkcs15_atrd.c  pkcs15_get.c  pkcs15_getp.c  pkcs15_rd.c  pkcs15_set.c
lib/cryptlib/mechs/: keyex.c  keyex_int.c  keyex_rw.c  mech.h  mech_drv.c  mech_pkwrap.c  mech_privk.c  mech_sig.c  obj_qry.c  sign.c  sign_cms.c  sign_int.c  sign_pgp.c  sign_rw.c  sign_x509.c
lib/cryptlib/misc/: analyse.h  config.h  consts.h  debug.h  fault.h  int_api.c  int_api.h  int_debug.c  int_env.c  int_err.c  int_mem.c  int_string.c  os_spec.c  os_spec.h  pgp.h  pgp_misc.c  user.c  user.h  user_cfg.c  user_rw.c
lib/cryptlib/random/: random.c  random.h  unix.c  win32.c
lib/cryptlib/session/: certstore.c  cmp.c  cmp.h  cmp_cry.c  cmp_rd.c  cmp_rdmsg.c  cmp_svr.c  cmp_wrmsg.c  ocsp.c  pnppki.c  scep.c  scep.h  scep_cli.c  scep_svr.c  scorebrd.c  sess_attr.c  sess_rw.c  session.c  session.h  ssh.c  ssh.h  ssh2.c  ssh2_authc.c  ssh2_chn.c  ssh2_cli.c  ssh2_cry.c  ssh2_msg.c  ssh2_msgc.c  ssh2_msgs.c  ssh2_rd.c  ssh2_svr.c  ssh2_wr.c  sshl_dh.c  ssl.c  ssl.h  ssl_cli.c  ssl_cry.c  ssl_ext.c  ssl_hs.c  ssl_hsc.c  (+5 more)
lib/cryptlib/test/: certimp.c  certproc.c  certs.c  envelope.c  filename.h  highlvl.c  keydbx.c  keyfile.c  loadkey.c  lowlvl.c  s_cmp.c  s_scep.c  sreqresp.c  ssh.c  ssl.c  test.h  testfunc.c  testlib.c  timing.c  utils.c
lib/cryptlib/test/keys/: cmp1.p15  cmp2.p15  dual.p15  pnp_ca.p15  pnp_user.p15  renewed.p15  test.p12  test.p15  user1.p15
lib/cryptlib/test/session/: ocsp_ok1.der  ocsp_re1.der
lib/cryptlib/tools/: buildall.sh  buildasm.sh  ccopts.sh  dumpasn1.c  dumpasn1.cfg  endian
lib/cryptlib/zlib/: zutil.h
lib/pdcurses/: Makefile  Makefile.bcc5  pdcurses.ide
lib/pdcurses/doc/: PDCurses.txt
lib/pdcurses/include/: curses.h
lib/pdcurses/pdcurses/: addch.c  initscr.c  termattr.c
lib/pdcurses/vc6pdcurses/: vc6pdcurses.dsp  vc6pdcurses.dsw
lib/pdcurses/win32a/: pdcdisp.c  pdckbd.c  pdcscrn.c  pdcutil.c  scr2html.c
lib/pdcurses/x11/: ScrollBox.c  ScrollBoxP.h  big_icon.xbm  big_icon.xpm  little_icon.xbm  pdcdisp.c  pdcscrn.c  pdcsetsc.c  pdcx11.c  pdcx11.h  x11.c
lib/upnp/: Makefile  README  connecthostport.c  minisoap.c  minissdpc.c  miniupnpc.c  miniupnpc.h  miniupnpc.ide  miniwget.c  miniwget.h
lib/upnp/vc6miniupnpc/: vc6miniupnpc.dsp  vc6miniupnpc.dsw
misc/: convert_ibbs.pl  convert_syncterm.pl  ibbs0316.txt  ibbs0319.txt  ibbs0416.txt  ibbs0517.txt
misc/utils/: 8bit_chars.txt  c64_bytes.txt  serial_raw.pl  test_avatar.txt
source/: ansi.c  ansi.h  atascii.c  atascii.h  avatar.c  avatar.h  codepage.c  codepage.h  colors.c  colors.h  common.c  common.h  config.h.in  console.c  console.h  debug.c  debug.h  dialer.c  dialer.h  emulation.c  emulation.h  field.c  field.h  forms.c  forms.h  help.c  help.h  host.c  host.h  input.c  input.h  kermit.c  kermit.h  keyboard.c  keyboard.h  linux.c  linux.h  modem.c  modem.h  music.c  (+35 more)
vc6qodem/: vc6qodem.dsp  vc6qodem.dsw
